--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "web-framework",
   "version": "0.0.1",
   "description": "web-framework aka spyro",
-  "main": "build/index.js",
+  "main": "lib/index.js",
   "scripts": {
     "test": "mocha",
-    "build": "babel --loose --stage 0 --out-dir build src"
+    "build": "babel --loose --stage 0 --out-dir lib src"
   },
   "repository": {
     "type": "git",
