--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "lib/index.js",
   "scripts": {
     "test": "mocha",
-    "build": "babel --loose --stage 0 --out-dir lib src"
+    "build": "rm -rf lib/* && babel --loose --stage 0 --out-dir lib src"
   },
   "repository": {
     "type": "git",
