--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "web-framework",
   "version": "0.0.2",
   "description": "web-framework aka spyro",
-  "main": "lib/index.js",
+  "main": "lib",
   "scripts": {
     "test": "mocha",
     "build": "rm -rf lib/* && babel --loose --stage 0 --out-dir lib src"
