--- a/package.json
+++ b/package.json
@@ -5,7 +5,10 @@
   "main": "lib",
   "scripts": {
     "test": "mocha",
-    "build": "rm -rf lib/* && babel --loose --stage 0 --out-dir lib src"
+    "build": "rm -rf lib && mkdir lib && babel --loose --stage 0 --out-dir lib src",
+    "lint": "eslint src",
+    "preversion": "npm run lint && npm run test",
+    "prepublish": "npm run build"
   },
   "repository": {
     "type": "git",
@@ -29,11 +32,11 @@
     "debug": "^2.2.0",
     "eventemitter3": "^1.1.0",
     "fetch-optimizer": "^0.2.0",
-    "react-router": "git://github.com/bobpace/react-router.git#transitionContext",
     "tcomb": "^2.0.0-beta",
     "tcomb-react": "^0.8.0"
   },
   "peerDependencies": {
-    "react": "^0.13.3"
+    "react": "^0.13.3",
+    "react-router": "git://github.com/bobpace/react-router.git#transitionContext"
   }
 }
