--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "babel-eslint": "^3.1.11",
     "eslint": "^0.23.0",
     "eslint-plugin-react": "^2.5.2",
-    "expect": "^1.6.0"
+    "expect": "^1.6.0",
+    "require-dir": "^0.3.0"
   },
   "dependencies": {
     "cookies-js": "^1.2.1",
