--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "require-dir": "^0.3.0"
   },
   "dependencies": {
+    "avenger": "0.0.2",
     "cookies-js": "^1.2.1",
     "debug": "^2.2.0",
     "eventemitter3": "^1.1.0",
