--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "debug": "^2.2.0",
     "eventemitter3": "^1.1.0",
     "fetch-optimizer": "^0.2.0",
+    "lodash": "^3.9.3",
     "tcomb": "^2.0.0-beta",
     "tcomb-react": "^0.8.0"
   },
