--- a/package.json
+++ b/package.json
@@ -32,15 +32,15 @@
     "require-dir": "^0.3.0"
   },
   "dependencies": {
-    "avenger": "^0.0.12",
+    "avenger": "^0.0.14",
     "axios": "^0.5.4",
     "cookies-js": "^1.2.1",
     "debug": "^2.2.0",
     "eventemitter3": "^1.1.0",
     "fetch-optimizer": "^0.2.0",
     "lodash": "^3.9.3",
-    "tcomb": "^2.0.0-beta",
-    "tcomb-react": "^0.8.0"
+    "tcomb": "^2.3.0",
+    "tcomb-react": "^0.8.8"
   },
   "peerDependencies": {
     "react": "^0.13.3",
