--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "sinon": "^1.16.1"
   },
   "dependencies": {
-    "avenger": "0.0.15",
+    "avenger": "^0.1.0",
     "axios": "^0.5.4",
     "cookies-js": "^1.2.1",
     "debug": "^2.2.0",
