jsx-quotes from eslint

--- a/.eslintrc
+++ b/.eslintrc
@@ -22,8 +22,8 @@
     "no-underscore-dangle": 0,
     "quotes": [2, "single"],
     "comma-dangle": 2,
+    "jsx-quotes": 1,
     "react/jsx-boolean-value": 1,
-    "react/jsx-quotes": 1,
     "react/jsx-no-undef": 1,
     "react/jsx-uses-react": 1,
     "react/jsx-uses-vars": 1,
