--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "eslint": "^1.6.0",
     "eslint-plugin-react": "^3.5.1",
     "expect": "^1.6.0",
+    "mocha": "^2.4.5",
     "react": "^0.14",
     "require-dir": "^0.3.0",
     "sinon": "^1.16.1"
